--- a/ip-block.html
+++ b/ip-block.html
@@ -4,10 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Service is not available</title>
+  <title>DeCus</title>
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <p>Service is not available in the current region</p>
   <p>Sorry about that.</p>
+  ::CLOUDFLARE_ERROR_1000S_BOX::
 </body>
 </html>
