--- a/ip-block.html
+++ b/ip-block.html
@@ -36,9 +36,9 @@
     <img src="./images/oops.svg" alt="oops" />
     <p>Service is not available in the current region</p>
     <p>Sorry about that.</p>
-    <p style="display: none">
+    <div style="display: none">
       ::CLOUDFLARE_ERROR_1000S_BOX::
-    </p>
+    </div>
   </div>
 </body>
 </html>
